🎉 Complete festive redesign with official logo integration
✨ Features Added:
- Vibrant festive color scheme (orange, gold, yellow gradients)
- Animated confetti and celebration effects
- Official Express ER Sweepstakes logo integration
- Glowing animations and hover effects
- Enhanced PWA manifest with festive branding
- Mobile-optimized responsive design
- Improved social media meta tags with logo

🎨 Visual Enhancements:
- Gradient animated backgrounds
- Celebration emojis throughout UI
- Pulsing glow effects on cards and buttons
- Festive header with logo and shimmer effects
- Enhanced success/error alerts with animations

📱 Technical Improvements:
- Updated favicon and PWA icons
- Enhanced service worker registration
- GitHub Pages deployment ready
- Optimized build configuration
- Mobile-first responsive styling

--- a/expressersweepstakes/public/manifest.json
+++ b/expressersweepstakes/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Express ER Sweepstakes",
-  "short_name": "ER Sweepstakes",
-  "description": "Enter the Express ER Sweepstakes for your chance to win!",
-  "theme_color": "#1976D2",
-  "background_color": "#121212",
+  "name": "🎉 Express ER Sweepstakes 🎉",
+  "short_name": "🏆 ER Sweepstakes",
+  "description": "🎊 Enter the Express ER Sweepstakes for your chance to win amazing prizes! 🎁",
+  "theme_color": "#FF6B35",
+  "background_color": "#16213E",
   "display": "standalone",
   "orientation": "portrait",
   "scope": "./",
