--- a/expressersweepstakes/package.json
+++ b/expressersweepstakes/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:netlify": "run-p type-check \"build-only:netlify {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
     "build-only": "vite build",
+    "build-only:netlify": "vite build --mode netlify",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
